--- a/blog/css/style.css
+++ b/blog/css/style.css
@@ -48,4 +48,65 @@
 
 /* ------ START WRITING YOUR CODE BELOW ------ */
 
+@font-face {
+    font-family: Ultra;
+    src: url(../fonts/serif/ultra-regular.ttf);
 
+}
+
+text-decoration:none
+
+.main-section {
+    display: flex;
+}
+article{
+width: 75%;
+}
+
+.article-image {
+
+float: left;
+margin: 0 1rem 0 0;
+}
+
+.article-image + p {
+margin-top: 0;
+
+}
+
+.subsection { 
+
+    margin-top: 4rem;
+    margin-bottom: 2rem;
+    padding: 0;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(5rem, 1fr));
+}
+.subsection figure{
+padding: 0;
+margin: 0;
+background-color: #eed;
+}
+
+
+aside{
+    clear: both;
+    width: 19%;
+    margin-left: 3%;
+    padding-left: 3%;
+    border-left: .0625rem solid #333;
+}
+
+footer{
+margin: 6rem auto .5rem auto;
+width: 90%;
+display: grid;
+grid-template-columns: 1fr 1fr;
+grid-column-gap: 1%;
+
+}
+
+footer :nth-child(2){
+
+    text-align: right;
+}
