--- a/plantets-table /css/style.css
+++ b/plantets-table /css/style.css
@@ -56,7 +56,7 @@ img {
       height: 100%; 
     }
     .bg { 
-      background-image: url("img_planets table.png");
+      background-image: url("img_planets.png");
       height: 100%;
       background-position: center;
       background-repeat: no-repeat;
